--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -17,5 +27,30 @@
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
   </head>
-  <body></body>
+  <body>
+    <div id="root">
+      <header>
+        <img src="./images/logo.svg" alt="logo" />
+      </header>
+      <main>
+        <section>
+          <article id="illustration">
+            <img
+              src="./images/illustration-mockups.svg"
+              alt="illustration mockups"
+            />
+          </article>
+          <article id="message">
+            <h2>Build The Community Your Fans Will Love</h2>
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does our audience. Create connections with your users as
+              you engage in genuine discussion.
+            </p>
+            <button id="register-btn">Register</button>
+          </article>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
